[gd_scene load_steps=24 format=2]

[ext_resource path="res://assets/terrain/wardrobe.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/Born2bSportyV2.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/items/Wardrobe.gd" type="Script" id=3]
[ext_resource path="res://themes/Blur.tres" type="Material" id=4]
[ext_resource path="res://assets/UI/textbox.png" type="Texture" id=5]
[ext_resource path="res://assets/characters/player/player_idle.png" type="Texture" id=6]
[ext_resource path="res://assets/UI/dialogue_background_large.png" type="Texture" id=7]
[ext_resource path="res://assets/UI/quiticon.png" type="Texture" id=8]
[ext_resource path="res://assets/characters/player/skins/cyber_ninja/player_idle.png" type="Texture" id=9]
[ext_resource path="res://assets/characters/player/skins/white_mage/player_idle.png" type="Texture" id=10]
[ext_resource path="res://assets/UI/button_pressed.png" type="Texture" id=11]
[ext_resource path="res://assets/UI/button.png" type="Texture" id=12]
[ext_resource path="res://shaders/outline2D_outer.gdshader" type="Shader" id=13]

[sub_resource type="ShaderMaterial" id=10]
shader = ExtResource( 13 )
shader_param/line_color = Color( 1, 0.843137, 0.0117647, 1 )
shader_param/line_thickness = 0.7

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 55, 60 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 2 )

[node name="Wardrobe" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 10 )
scale = Vector2( 7, 7 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Label" type="RichTextLabel" parent="."]
visible = false
margin_left = -59.0
margin_top = -131.0
margin_right = 85.0
margin_bottom = -77.0
custom_fonts/bold_font = SubResource( 2 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[b]Use[/b] [img=40]res://assets/UI/icon_Empty.png[/img]"
text = "Use "
scroll_active = false

[node name="Keybind" type="Label" parent="."]
visible = false
anchor_left = -3.732
anchor_right = -3.732
margin_left = 26.7341
margin_top = -133.0
margin_right = 54.7341
margin_bottom = -69.0
rect_scale = Vector2( 0.75, 0.75 )
custom_colors/font_color = Color( 0.192157, 0.372549, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "R"
align = 1
valign = 1

[node name="WardrobeUI" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="Control" type="Control" parent="WardrobeUI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -540.0
margin_top = -360.0
margin_right = 540.0
margin_bottom = 360.0

[node name="Blur" type="ColorRect" parent="WardrobeUI/Control"]
material = ExtResource( 4 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1176.64
margin_top = -639.091
margin_right = 2063.36
margin_bottom = 1520.91
color = Color( 1, 1, 1, 0 )

[node name="NinePatchRect" type="NinePatchRect" parent="WardrobeUI/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -375.0
margin_top = -225.0
margin_right = 375.0
margin_bottom = 225.0
texture = ExtResource( 5 )
patch_margin_left = 64
patch_margin_top = 64
patch_margin_right = 64
patch_margin_bottom = 64

[node name="Header" type="RichTextLabel" parent="WardrobeUI/Control/NinePatchRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -307.0
margin_top = 10.0
margin_right = 101.0
margin_bottom = 37.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]=== [color=#ffd703]Wardrobe Selection[/color] ==="
text = "=== Wardrobe Selection ==="
scroll_active = false

[node name="SelectCharactersUI" type="Control" parent="WardrobeUI/Control/NinePatchRect"]
margin_left = -54.0
margin_top = -36.0
margin_right = -14.0
margin_bottom = 4.0

[node name="CloseButtonMainUI" type="TextureButton" parent="WardrobeUI/Control/NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -375.0
margin_top = -224.0
margin_right = -335.0
margin_bottom = -184.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PartyCannotBeEmptyLabel" type="Label" parent="WardrobeUI/Control/NinePatchRect"]
visible = false
anchor_left = 0.5
anchor_top = 1.093
anchor_right = 0.5
anchor_bottom = 1.093
margin_left = -210.0
margin_top = -39.176
margin_right = 210.0
margin_bottom = 8.82397
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "Party cannot be empty."
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="WardrobeUI/Control/NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -345.0
margin_top = -168.0
margin_right = 345.0
margin_bottom = 190.0
rect_min_size = Vector2( 690, 330 )

[node name="VBoxContainer" type="VBoxContainer" parent="WardrobeUI/Control/NinePatchRect/ScrollContainer"]
margin_right = 690.0
margin_bottom = 800.0
rect_min_size = Vector2( 690, 800 )

[node name="PlayerControl" type="Control" parent="WardrobeUI/Control/NinePatchRect/ScrollContainer/VBoxContainer"]
margin_right = 690.0

[node name="PlayerSprite" type="Sprite" parent="WardrobeUI/Control/NinePatchRect/ScrollContainer/VBoxContainer/PlayerControl"]
position = Vector2( 55, 110 )
scale = Vector2( 6.5, 6.5 )
texture = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="WardrobeUI/Control/NinePatchRect/ScrollContainer/VBoxContainer/PlayerControl"]
margin_left = 122.0
margin_top = 13.0
margin_right = 667.0
margin_bottom = 213.0
texture = ExtResource( 7 )
expand = true

[node name="PlayerLabel" type="Label" parent="WardrobeUI/Control/NinePatchRect/ScrollContainer/VBoxContainer/PlayerControl"]
anchor_left = 0.001
anchor_right = 0.001
margin_left = 15.31
margin_top = 17.0
margin_right = 91.31
margin_bottom = 49.0
custom_colors/font_color = Color( 1, 0.843137, 0.0117647, 1 )
custom_fonts/font = SubResource( 6 )
text = "Player"

[node name="CurrentPlayerSkinLabel" type="Label" parent="WardrobeUI/Control/NinePatchRect/ScrollContainer/VBoxContainer/PlayerControl"]
anchor_left = 0.001
anchor_right = 0.001
margin_left = -0.69
margin_top = 179.0
margin_right = 75.31
margin_bottom = 211.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 7 )
text = "Current Skin"

[node name="DefaultSkin" type="Sprite" parent="WardrobeUI/Control/NinePatchRect/ScrollContainer/VBoxContainer/PlayerControl"]
position = Vector2( 180, 70 )
scale = Vector2( 3, 3 )
texture = ExtResource( 6 )

[node name="DefaultSkinLabel" type="Label" parent="WardrobeUI/Control/NinePatchRect/ScrollContainer/VBoxContainer/PlayerControl"]
margin_left = 211.0
margin_top = 34.0
margin_right = 280.0
margin_bottom = 50.0
rect_scale = Vector2( 1.25, 1.25 )
custom_colors/font_color = Color( 1, 0.843137, 0.0117647, 1 )
custom_fonts/font = SubResource( 8 )
text = "Default"
align = 1

[node name="DefaultSkinSelectButton" type="TextureButton" parent="WardrobeUI/Control/NinePatchRect/ScrollContainer/VBoxContainer/PlayerControl"]
margin_left = 215.0
margin_top = 57.0
margin_right = 295.0
margin_bottom = 97.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 11 )
expand = true

[node name="Label" type="Label" parent="WardrobeUI/Control/NinePatchRect/ScrollContainer/VBoxContainer/PlayerControl/DefaultSkinSelectButton"]
margin_left = 13.0
margin_top = 9.0
margin_right = 49.0
margin_bottom = 25.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
text = "Select"
align = 1

[node name="WhiteMage" type="Sprite" parent="WardrobeUI/Control/NinePatchRect/ScrollContainer/VBoxContainer/PlayerControl"]
position = Vector2( 332, 70 )
scale = Vector2( 3, 3 )
texture = ExtResource( 10 )

[node name="WhiteMageLabel" type="Label" parent="WardrobeUI/Control/NinePatchRect/ScrollContainer/VBoxContainer/PlayerControl"]
margin_left = 363.0
margin_top = 34.0
margin_right = 432.0
margin_bottom = 50.0
rect_scale = Vector2( 1.25, 1.25 )
custom_colors/font_color = Color( 1, 0.843137, 0.0117647, 1 )
custom_fonts/font = SubResource( 8 )
text = "White Mage"

[node name="WhiteMageSelectButton" type="TextureButton" parent="WardrobeUI/Control/NinePatchRect/ScrollContainer/VBoxContainer/PlayerControl"]
margin_left = 367.0
margin_top = 57.0
margin_right = 447.0
margin_bottom = 97.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 11 )
expand = true

[node name="Label" type="Label" parent="WardrobeUI/Control/NinePatchRect/ScrollContainer/VBoxContainer/PlayerControl/WhiteMageSelectButton"]
margin_left = 13.0
margin_top = 9.0
margin_right = 49.0
margin_bottom = 25.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
text = "Select"
align = 1

[node name="CyberNinja" type="Sprite" parent="WardrobeUI/Control/NinePatchRect/ScrollContainer/VBoxContainer/PlayerControl"]
position = Vector2( 180, 150 )
scale = Vector2( 3, 3 )
texture = ExtResource( 9 )

[node name="CyberNinjaLabel" type="Label" parent="WardrobeUI/Control/NinePatchRect/ScrollContainer/VBoxContainer/PlayerControl"]
margin_left = 211.0
margin_top = 120.0
margin_right = 280.0
margin_bottom = 136.0
rect_scale = Vector2( 1.25, 1.25 )
custom_colors/font_color = Color( 1, 0.843137, 0.0117647, 1 )
custom_fonts/font = SubResource( 8 )
text = "Cyber Ninja"

[node name="CyberNinjaSelectButton" type="TextureButton" parent="WardrobeUI/Control/NinePatchRect/ScrollContainer/VBoxContainer/PlayerControl"]
margin_left = 215.0
margin_top = 144.0
margin_right = 295.0
margin_bottom = 184.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 11 )
expand = true

[node name="Label" type="Label" parent="WardrobeUI/Control/NinePatchRect/ScrollContainer/VBoxContainer/PlayerControl/CyberNinjaSelectButton"]
margin_left = 13.0
margin_top = 9.0
margin_right = 49.0
margin_bottom = 25.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
text = "Select"
align = 1

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="pressed" from="WardrobeUI/Control/NinePatchRect/CloseButtonMainUI" to="." method="_on_CloseButtonMainUI_pressed"]
[connection signal="pressed" from="WardrobeUI/Control/NinePatchRect/ScrollContainer/VBoxContainer/PlayerControl/DefaultSkinSelectButton" to="." method="_on_DefaultSkinSelectButton_pressed"]
[connection signal="pressed" from="WardrobeUI/Control/NinePatchRect/ScrollContainer/VBoxContainer/PlayerControl/WhiteMageSelectButton" to="." method="_on_WhiteMageSelectButton_pressed"]
[connection signal="pressed" from="WardrobeUI/Control/NinePatchRect/ScrollContainer/VBoxContainer/PlayerControl/CyberNinjaSelectButton" to="." method="_on_CyberNinjaSelectButton_pressed"]
